syntax = "proto2";
package reedb_proto;

message rdb_data {
  
  // An entry type for strings
  message string_pair {
    required string key = 1;
    required string val = 2;
  }
  
  // An entry type for numbers
  message num_pair {
    required string key = 1;
    required string val = 2;
  }

  // A revision contains however many numbers of string and num pairs
  message revision {
    required int32 rev_no = 1;
    repeated string_pair sentry = 2;
    repeated num_pair nentry = 3;
  }
  
  // A datafile has a name and a category
  required string name = 1;
  required string category = 2;

  // Datafiles also have urls and tags
  // TODO: Find a way to generate this from code
  repeated string url = 3;
  repeated string tags = 4;
  
  // Actual data stored in revisions
  repeated revision revs = 5;
}
